--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -154,9 +154,11 @@
   <ItemGroup>
     <ClCompile Include="gesturetree.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Quat.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gesturetree.h" />
+    <ClInclude Include="Quat.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
