mykinect class implemented

--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -154,11 +154,15 @@
   <ItemGroup>
     <ClCompile Include="gesturetree.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mykinect.cpp" />
     <ClCompile Include="Quat.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gesturetree.h" />
+    <ClInclude Include="mykinect.h" />
     <ClInclude Include="Quat.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
